SO_XXX Parameters changed to int, 64b long seems to be invalid

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,15 +1,26 @@
 CXX=g++
+
 RM=rm
+
 CPPFLAGS=-std=c++11 -pedantic -Wall -Wextra -Wold-style-cast -Woverloaded-virtual -Wredundant-decls -Wsign-conversion -Wsign-promo -Wno-unused -I/usr/local/include #  -Werror
+UNAME := $(shell uname)
+ifeq ($(UNAME), Linux)
+CPPFLAGS+=-pthread
+endif
+
 CommonDeps=ProxyProto.cpp Log.cpp Session.cpp Host.cpp
+
 ServerDeps=Server.cpp
+
 ClientDeps=Client.cpp
-all: Client Server
+
+all: Server Client
 
 Server: $(CommonDeps) $(ServerDeps)
 	$(CXX) $(CPPFLAGS) -oServer $(CommonDeps) $(ServerDeps)
+
 Client: $(CommonDeps) $(ClientDeps)
 	$(CXX) $(CPPFLAGS) -oClient $(CommonDeps) $(ClientDeps)
+
 clean:
 	$(RM) Server Client
-
